[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Traps/Trap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GFX/Traps/falling_spike_kenney.png" type="Texture" id=2]
[ext_resource path="res://src/Traps/FallingSpike.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/SoundEffects/FallingSpike.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 6.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.0927, 81.2243 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.90708, 2.79087 )

[node name="FallingSpike" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 9 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
position = Vector2( 0, 81 )
shape = SubResource( 2 )

[node name="GroundDetector" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector" index="0"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="LifeTime" type="Timer" parent="." index="4"]
one_shot = true

[node name="ActivationTime" type="Timer" parent="." index="5"]
one_shot = true

[node name="FallSound" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 4 )
volume_db = -12.117
[connection signal="body_entered" from="." to="." method="_on_FallingSpike_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetectror_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="ActivationTime" to="." method="_on_ActivationTime_timeout"]
